Login y asesor vista1 Images

--- a/asesor.html
+++ b/asesor.html
@@ -7,6 +7,8 @@
     <title>Servicio</title>
 <body>
 <div class="contenedor"><!--comentarios html -->
+
+    </div>
     <header>
         <center>
             <img src="images/VWLog.jpg" height="300">
