--- a/login.html
+++ b/login.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>HyP</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+<div class="container-fluid">
 <center>
     <picture>
         <img src="images/alden.png"
@@ -23,6 +23,7 @@
 
         <input type=“password” placeholder=“contraseña” name=“txtpassword”/>
         <br><br><br><br>
+
         <div class="button">
 
             <!-- <input type="image" name="vw" src="images/logo.jpg"
@@ -32,6 +33,7 @@
                 <input type="image" name="vw" src="images/logo.jpg"
                        width="50" height="50"></a>
 
+        </div>
         </div>
 
 
