--- a/asesor.html
+++ b/asesor.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="description" content="Servicio Taller">
-    <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no"> <!--Reproducción adecuada de zoom -->
     <!--Bootstrap css -->
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
