Contenido Boot... Login

--- a/login.html
+++ b/login.html
@@ -12,9 +12,11 @@
 <div class="container">
     <div class="jumbotron jumbotron" style="background:transparent !important">
         <div class="container">
+            <center>
             <img src="images/alden.png"
                  srcset="images/alden.png 320w"
                  sizes="(min-width: 576px) 33.3vw, 100vw">
+            </center>
         </div>
     </div>
     <div class="row">
@@ -39,7 +41,7 @@
             </form>
         </div>
         <div class="col-12 	col-sm-12 	col-md-12 	col-lg-12 	col-xl-12" style="justify-content: center">
-            <marquee>Satisfacción total </marquee><marquee direction="right"> Hey Mercedes me gustan tus Cachetitos!!!!</marquee>
+            <marquee>Satisfacción total </marquee><marquee direction="right"> </marquee>
         </div>
     </div>
 
